--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.544.0",
     "next": "15.5.2",
+    "qs": "^6.14.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
@@ -20,6 +21,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/qs": "^6.14.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
